examples/fail/unreachable_after_panic_vardecl.hax
sub f() -> Void {
  var int $x = panic();
  var int $y = 2;
}
